# test_case_sender

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/application/: main.py
app/core/settings/: __init__.py  base.py  dev.py  prod.py
app/di/: __init__.py  container.py
app/di/providers/: __init__.py  core.py
app/infra/monitoring/: trace_exporter.py
app/infra/monitoring/metrics/: custom_metrics.py  metrics_exporter.py
app/infra/taskiq/: app.py  middlewares.py  sender_tasks.py  utils.py
docker_compose/: app.yaml
